poc-k8s-ghost/service.yml
apiVersion: v1
kind: Service
metadata:
  name: poc-ghost
  namespace: poc
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
