poc-k8s-ghost/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ghost
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: poc-ghost
            port:
              number: 80
